# MiniEngine

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Assets/Global/: Rendering.Global.json
Engine/Binary/: precompile.json
Engine/Configs/Deployment/: MiniEngineEditor.ini
Engine/Configs/Development/: MiniEngine.ini  MiniEngineEditor.ini
Engine/MEditor/: Axis.cpp  Axis.hpp  CMakeLists.txt  MEditor.cpp  MEditor.hpp  MEditorFileService.cpp  MEditorFileService.hpp  MEditorGlobalContext.cpp  MEditorGlobalContext.hpp  MEditorInputManager.cpp  MEditorInputManager.hpp  MEditorSceneManager.cpp  MEditorSceneManager.hpp  MEditorUI.cpp  MEditorUI.hpp  main.cpp
Engine/MRuntime/: CMakeLists.txt  MEngine.cpp  MEngine.hpp
Engine/MRuntime/Core/Base/: Hash.hpp  Marco.hpp
Engine/MRuntime/Core/Log/: LogSystem.cpp  LogSystem.hpp
Engine/MRuntime/Core/Math/: AxisAligned.cpp  AxisAligned.hpp  Color.hpp  Math.cpp  Math.hpp  MathHeaders.hpp  MathMarcos.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Random.hpp  Transform.hpp  Vector.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Engine/MRuntime/Core/Meta/: Json.hpp  MetaTest.cpp  MetaTest.hpp
Engine/MRuntime/Core/Meta/Reflection/: Reflection.cpp  Reflection.hpp  ReflectionRegister.cpp  ReflectionRegister.hpp
Engine/MRuntime/Core/Meta/Serializer/: Serializer.cpp  Serializer.hpp
Engine/MRuntime/Function/Framework/Component/: Component.hpp
Engine/MRuntime/Function/Framework/Component/MeshComponent/: MeshComponent.cpp  MeshComponent.hpp  RawMesh.hpp
Engine/MRuntime/Function/Framework/Component/TransformComponent/: TransformComponent.cpp  TransformComponent.hpp
Engine/MRuntime/Function/Framework/Object/: Object.cpp  Object.hpp  ObjectIDAllocator.cpp  ObjectIDAllocator.hpp
Engine/MRuntime/Function/Framework/Scene/: Scene.cpp  Scene.hpp
Engine/MRuntime/Function/Framework/World/: WorldManager.cpp  WorldManager.hpp
Engine/MRuntime/Function/Global/: GlobalContext.cpp  GlobalContext.hpp
Engine/MRuntime/Function/Input/: InputSystem.cpp  InputSystem.hpp
Engine/MRuntime/Function/Render/: Light.hpp  RenderCamera.cpp  RenderCamera.hpp  RenderCommon.hpp  RenderDebugConfig.hpp  RenderEntity.hpp  RenderGuidAllocator.hpp  RenderHelper.cpp  RenderHelper.hpp  RenderMesh.hpp  RenderObject.hpp  RenderPass.cpp  RenderPass.hpp  RenderPassBase.cpp  RenderPassBase.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderPipelineBase.cpp  RenderPipelineBase.hpp  RenderResource.cpp  RenderResource.hpp  RenderResourceBase.cpp  RenderResourceBase.hpp  RenderScene.cpp  RenderScene.hpp  RenderSwapContext.cpp  RenderSwapContext.hpp  RenderSystem.cpp  RenderSystem.hpp  WindowSystem.cpp  WindowSystem.hpp
Engine/MRuntime/Function/Render/DebugDraw/: DebugDrawBuffer.cpp  DebugDrawBuffer.hpp  DebugDrawContext.cpp  DebugDrawContext.hpp  DebugDrawFont.cpp  DebugDrawFont.hpp  DebugDrawGroup.cpp  DebugDrawGroup.hpp  DebugDrawManager.cpp  DebugDrawManager.hpp  DebugDrawPipeline.cpp  DebugDrawPipeline.hpp  DebugDrawPrimitive.cpp  DebugDrawPrimitive.hpp
Engine/MRuntime/Function/Render/Interface/: RHI.hpp  RHIStruct.hpp
Engine/MRuntime/Function/Render/Passes/: ColorGradientPass.cpp  ColorGradientPass.hpp  CombineUIPass.cpp  CombineUIPass.hpp  DirectionalLightPass.cpp  DirectionalLightPass.hpp  MainCameraPass.cpp  MainCameraPass.hpp  PickPass.cpp  PickPass.hpp  ToneMappingPass.cpp  ToneMappingPass.hpp  UIPass.cpp  UIPass.hpp
Engine/MRuntime/Function/UI/: WindowUI.hpp
Engine/MRuntime/Platform/FileSystem/: FileSystem.cpp  FileSystem.hpp
Engine/MRuntime/Platform/Path/: Path.cpp  Path.hpp
Engine/MRuntime/Resource/AssetManager/: AssetManager.cpp  AssetManager.hpp
Engine/MRuntime/Resource/ConfigManager/: ConfigManager.cpp  ConfigManager.hpp
Engine/MRuntime/Resource/ResourceType/Common/: Object.hpp  Scene.hpp  World.hpp
Engine/MRuntime/Resource/ResourceType/Component/: Camera.cpp  Camera.hpp  Mesh.hpp
Engine/MRuntime/Resource/ResourceType/Data/: BasicShape.hpp  CameraConfig.hpp  Material.hpp  MeshData.hpp
Engine/MRuntime/Resource/ResourceType/Global/: GlobalRendering.hpp
Engine/Parser/: CMakeLists.txt
Engine/Parser/Parser/: main.cpp
Engine/Parser/Parser/Common/: Namespace.hpp  PreCompiled.hpp  SchemaModule.hpp
Engine/Parser/Parser/Cursor/: Cursor.cpp  Cursor.hpp  CursorType.cpp  CursorType.hpp
Engine/Parser/Parser/Generator/: Generator.cpp  Generator.hpp  ReflectionGenerator.cpp  ReflectionGenerator.hpp  SerializerGenerator.cpp  SerializerGenerator.hpp
Engine/Parser/Parser/LanguageTypes/: Class.cpp  Class.hpp  Field.cpp  Field.hpp  TypeInfo.cpp  TypeInfo.hpp
Engine/Parser/Parser/Meta/: MetaDataConfig.hpp  MetaInfo.cpp  MetaInfo.hpp  MetaUtils.cpp  MetaUtils.hpp
Engine/Parser/Parser/Parser/: Parser.cpp  Parser.hpp
Engine/Parser/Parser/TemplateManager/: TemplateManager.cpp  TemplateManager.hpp
Engine/Parser/PreCompile/: precompile.cmake  precompile.json.in
Engine/Parser/Template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
Engine/Shader/: CMakeLists.txt
Engine/Shader/Common/: Constant.h  GBuffer.h  Structures.h
Engine/Shader/GLSL/: DebugDraw.vert
Engine/Source/MEditor/: CMakeLists.txt  MEditor.cpp  MEditor.h  MEditor.hpp  MEditorUI.cpp  MEditorUI.h  main.cpp
Engine/Source/MRuntime/: CMakeLists.txt  MEngine.cpp  MEngine.h
Engine/Source/MRuntime/Core/Base/: Hash.h  Marco.h  Marco.hpp
Engine/Source/MRuntime/Function/Global/: GlobalContext.cpp  GlobalContext.h  GlobalContext.hpp
Engine/Source/MRuntime/Function/Render/: RenderPipeline.cpp  RenderPipeline.h  RenderPipeline.hpp  RenderPipelineBase.cpp  RenderPipelineBase.h  RenderPipelineBase.hpp  RenderResourceBase.h  RenderSystem.cpp  RenderSystem.h  RenderSystem.hpp  RenderType.h  RenderType.hpp  WindowSystem.cpp  WindowSystem.h
Engine/Source/MRuntime/Function/UI/: WindowUI.cpp  WindowUI.h
Engine/Source/MRuntime/Resource/ConfigManager/: ConfigManager.hpp
(+29 files in other folders)
